# axum-dioxus-shopping-list

./: .gitignore  Cargo.toml  Makefile.toml  README.md  package-lock.json  run.sh  tailwind.config.js
backend/: Cargo.toml
backend/src/: controller.rs  database.rs  main.rs
frontend/: Cargo.toml  Dioxus.toml  package.json  tailwind.config.js
frontend/src/: main.rs
frontend/src/components/: ItemDeleteButton.rs  ItemInput.rs  ListChanged.rs  ListItem.rs  LoadOrCreateList.rs  Profile.rs  ShoppingList.rs  ShoppingListDisplay.rs  mod.rs
frontend/src/layout/: ThemeChooserLayout.rs  mod.rs
model/: Cargo.toml
model/src/: lib.rs
