[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
serde = { version = "1.0.197" }
serde_json = { version = "1.0.114" }

axum = { version = "0.7.4" }
tokio = { version = "1.36.0", features = ["full"] }